@@ -27,10 +27,6 @@ sig
   val string_of_thm_without_context: thm -> string
   val pretty_thms_aux: Proof.context -> bool -> thm list -> Pretty.T
   val pretty_thms: Proof.context -> thm list -> Pretty.T
-  val pretty_ctyp: ctyp -> Pretty.T
-  val string_of_ctyp: ctyp -> string
-  val pretty_cterm: cterm -> Pretty.T
-  val string_of_cterm: cterm -> string
   val print_syntax: theory -> unit
   val pretty_full_theory: bool -> theory -> Pretty.T list
 end;
@@ -117,15 +113,6 @@ fun pretty_thms_aux ctxt flag [th] = pretty_thm_aux ctxt flag th
       Pretty.blk (0, Pretty.fbreaks (map (pretty_thm_aux ctxt flag) ths));
 
 fun pretty_thms ctxt = pretty_thms_aux ctxt true;
-
-
-(* other printing commands *)
-
-fun pretty_ctyp cT = Syntax.pretty_typ_global (Thm.theory_of_ctyp cT) (Thm.typ_of cT);
-fun string_of_ctyp cT = Syntax.string_of_typ_global (Thm.theory_of_ctyp cT) (Thm.typ_of cT);
-
-fun pretty_cterm ct = Syntax.pretty_term_global (Thm.theory_of_cterm ct) (Thm.term_of ct);
-fun string_of_cterm ct = Syntax.string_of_term_global (Thm.theory_of_cterm ct) (Thm.term_of ct);
 
 
 
